Convert book constustor to class

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
-  background-image: url(./Images/library.jpg);
-  background-size: cover;
+  background-image: url(./Images/bookshelf3.jpg);
+  background-size: 100%  100%;
   background-repeat: no-repeat;
   height: 100%;
 }
